<!--
  ~ Created by RadenMas on 10/3/2022.
  ~ Copyright (c) 2022.
  -->

<resources>
    <string name="app_name">Smart Water Meter</string>
    <string name="app_version">Versi %1$s</string>
<!--    <string name="app_pref">app_pref</string>-->
<!--    <string name="level">level</string>-->
    <string name="dev_name">M Sukron Kurniawan</string>
    <string name="login">Masuk</string>
    <string name="login_desc">Selamat Datang di Aplikasi Smart Water Meter</string>
    <string name="username">Username</string>
    <string name="password">Kata Sandi</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="user">Pelanggan</string>
    <string name="admin">Pengelola</string>
    <string name="name">Nama</string>
    <string name="rp">Rp.</string>
    <string name="usage">Pemakaian</string>
    <string name="usage_cost">Biaya Pemakaian</string>
    <string name="statistik">Statistik</string>
    <string name="skip">Lewati</string>
<!--    <string name="m3">M\u00B3</string>-->
    <string name="m3">L</string>
    <string name="billing">Tagihan</string>
    <string name="billing_history">Riwayat Tagihan</string>
    <string name="view_all">Lihat semua</string>
    <string name="user_id">ID Pelanggan</string>
    <string name="phone_number">Nomor HP</string>
    <string name="alamat">Alamat</string>
    <string name="akun">Akun</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="tentang">Tentang</string>
    <string name="terms">Syarat dan Ketentuan</string>
    <string name="privacy">Kebijakan Privasi</string>
    <string name="help">Pusat Bantuan</string>
    <string name="logout">Keluar</string>
    <string name="profile">Profil</string>
    <string name="webserver">Webserver</string>
    <string name="notification">Notifikasi</string>
    <string name="debit">Debit Air</string>
    <string name="save">Simpan</string>
    <string name="pengaduan">Pengaduan</string>
    <string name="jenis_pengaduan">Jenis Pengaduan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="send">Kirim</string>
    <string name="keluhan">Keluhan</string>
    <string name="riwayat">Riwayat</string>
    <string name="pdam">PDAM</string>
    <string name="sambungan">Sambungan</string>
    <string name="setting">Pengaturan</string>
    <string name="add_user">Tambah Pelanggan</string>
    <string name="add">Tambah</string>
    <string name="data_user">Data Pelanggan</string>
    <string name="hai">Hai,</string>
    <string name="dash">-</string>
    <string name="confirm">Konfirmasi</string>
    <string name="desc_logout">Apakah Anda yakin ingin keluar dari aplikasi ini?</string>
    <string name="desc_reset">Apakah Anda yakin ingin mereset data alat ini?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="sent">Terkirim</string>
    <string name="processed">Diproses</string>
    <string name="finish">Selesai</string>
    <string name="rejected">Ditolak</string>
    <string name="reset">Reset</string>
    <string name="search_user">Cari Nama Pelanggan</string>
    <string name="all">Semua</string>
    <string name="back">back</string>
    <string name="_24_jam">Hari</string>
    <string name="_7_hari">Minggu</string>
    <string name="_1_bulan">Bulan</string>
    <string name="detail_pengaduan">Detail Pengaduan</string>
    <string name="detail_billing">Detail Tagihan</string>
    <string name="reject">Tolak</string>
    <string name="accept">Terima</string>
    <string name="period">Periode</string>
    <string name="paid_off">Lunas</string>
    <string name="not_yet_paid_off">Belum Lunas</string>
    <string name="maintenance">Pemeliharaan</string>
    <string name="maintenance_cost">Biaya Pemeliharaan</string>
    <string name="pay_date">Tanggal Bayar</string>
    <string name="status">Status</string>
    <string name="aduan">Aduan</string>
    <string name="kontrol_aliran_air">Kontrol Aliran Air</string>
    <string name="aktif">Aktif</string>
    <string name="ktp">KTP</string>
    <string name="registered">Terdaftar</string>
    <string name="note">Catatan</string>
    <string name="reply_aduan">Catatan pengaduan</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="phone">Telepon</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="url_smartpdam">http://smartpdam.com</string>
    <string name="email_smartpdam">radenmas.dev@gmail.com</string>
    <string name="phone_smartpdam">+6285298106699</string>
    <string name="prabayar">Prabayar</string>
    <string name="pascabayar">Pascabayar</string>
    <string name="set_call_water">Atur Kalibrasi Air</string>
    <string name="set_value">Atur Nilai</string>
    <string name="information">Informasi</string>
    <string name="jenis_informasi">Jenis Informasi</string>
    <string name="message">Pesan</string>
    <string name="limit">Limit</string>
    <string name="calibration">Kalibrasi</string>
</resources>