<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 10/3/2022.
  ~ Copyright (c) 2022.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserPengaduanFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="28dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_arrow_left" />

                <TextView
                    style="@style/TitleToolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imgBack"
                    android:text="@string/pengaduan" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <HorizontalScrollView
        android:id="@+id/sortir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHistoryAll"
                style="@style/ButtonStyle3"
                android:layout_marginStart="16dp"
                android:text="@string/all"
                android:textColor="@color/primary_text"
                app:strokeColor="@color/primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHistorySend"
                style="@style/ButtonStyle3"
                android:layout_marginStart="8dp"
                android:text="@string/sent"
                android:textColor="@color/hint"
                app:strokeColor="@color/white_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHistoryProses"
                style="@style/ButtonStyle3"
                android:layout_marginStart="8dp"
                android:text="@string/processed"
                android:textColor="@color/hint"
                app:strokeColor="@color/white_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHistoryDone"
                style="@style/ButtonStyle3"
                android:layout_marginStart="8dp"
                android:text="@string/finish"
                android:textColor="@color/hint"
                app:strokeColor="@color/white_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHistoryReject"
                style="@style/ButtonStyle3"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/rejected"
                android:textColor="@color/hint"
                app:strokeColor="@color/white_text" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAduanUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sortir"
        tools:listitem="@layout/list_aduan_user" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/empty_box" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddAduan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_icon_blue"
        android:contentDescription="@string/add_user"
        android:src="@drawable/ic_chat_outline"
        app:tint="@android:color/white" />

</RelativeLayout>