<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by RadenMas on 10/3/2022.
  ~ Copyright (c) 2022.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="56dp"
            android:src="@drawable/img_login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/login"
            android:textColor="@color/primary_text"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/login_desc"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etUsername"
            style="@style/EditTextAuth"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_profile_outline"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditTextAuth"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_unlock_outline"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:visibility="gone"
            android:text="@string/forgot_password"
            android:textColor="@color/primary"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/ButtonStyle1"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primary"
            android:text="@string/login" />

    </LinearLayout>
</ScrollView>
