<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 10/3/2022.
  ~ Copyright (c) 2022.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.AdminAddUserFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/imgBack"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/add_user"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/user"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etUserID"
                style="@style/EditTextAuth"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_card_outline"
                android:hint="@string/user_id"
                android:inputType="number"
                android:maxLength="7" />

            <EditText
                android:id="@+id/etFullName"
                style="@style/EditTextAuth"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_profile_outline"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etNoKtp"
                style="@style/EditTextAuth"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_card_outline"
                android:hint="Nomor KTP"
                android:inputType="number" />


            <EditText
                android:id="@+id/etPhone"
                style="@style/EditTextAuth"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_phone_outline"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="13" />

            <EditText
                android:id="@+id/etAddress"
                style="@style/EditTextAuth"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_location_outline"
                android:hint="@string/alamat"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/dateRegitrasi"
                style="@style/EditTextAuth"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_calender_outline"
                android:hint="Tanggal Registrasi"
                android:inputType="datetime" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="Meteran"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etYearMeteran"
                style="@style/EditTextAuth"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_calender_outline"
                android:hint="Tahun Pembuatan"
                android:inputType="number"
                android:maxLength="4" />

            <EditText
                android:id="@+id/etTypeMeteran"
                style="@style/EditTextAuth"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_droplet_outline"
                android:hint="Jenis"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="Pembayaran"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrabayar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edit_text"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="12dp"
                    android:text="@string/prabayar"
                    android:textColor="@color/hint"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvPascabayar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edit_text"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="12dp"
                    android:text="@string/pascabayar"
                    android:textColor="@color/hint"
                    android:textSize="14sp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddUser"
                style="@style/ButtonStyle1"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/primary"
                android:text="@string/add" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
