<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 11/3/2022.
  ~ Copyright (c) 2022.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_title_bottom_sheet"
                android:fontFamily="@font/roboto_medium"
                android:paddingStart="16dp"
                android:paddingTop="20dp"
                android:paddingEnd="16dp"
                android:paddingBottom="18dp"
                android:text="@string/set_call_water"
                android:textColor="@color/white_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etValue"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:hint="@string/set_value"
                android:inputType="numberDecimal"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                style="@style/ButtonStyle2"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save"
                app:backgroundTint="@color/primary" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgDismiss"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:padding="7dp"
            android:src="@drawable/ic_close"
            android:textColor="@color/hint"
            android:textSize="24sp"
            app:tint="@color/white" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>