<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 13/3/2022.
  ~ Copyright (c) 2022.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/confirm"
        android:textColor="@color/primary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvDescConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:textColor="@color/primary_text"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            app:backgroundTint="@color/white"
            app:cornerRadius="8dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/primary"
            app:cornerRadius="8dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="1dp" />
    </LinearLayout>


</LinearLayout>