<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 11/3/2022.
  ~ Copyright (c) 2022.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/pengaduan"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/jenis_pengaduan"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etTitleAduan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_light"
                android:gravity="top"
                android:hint="Contoh: Air Tidak Mengalir"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/deskripsi"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etDescAduan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_light"
                android:gravity="top"
                android:hint="@string/deskripsi"
                android:minLines="5"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendAduan"
                style="@style/ButtonStyle2"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/send" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgDismiss"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:padding="3dp"
            android:src="@drawable/ic_close_outline"
            android:textColor="@color/hint"
            android:textSize="24sp"
            app:tint="@color/hint" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>