<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 10/3/2022.
  ~ Copyright (c) 2022.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.AdminUserFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_left" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/imgBack"
                android:background="@drawable/bg_edit_text"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_search_outline" />

                <EditText
                    android:id="@+id/etSearchUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/search_user"
                    android:inputType="textPersonName"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/hint"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAllDataUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/list_user" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fabAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_icon_blue"
        android:contentDescription="@string/add_user"
        android:src="@drawable/ic_add_user_outline"
        app:tint="@android:color/white" />
</RelativeLayout>
